WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144810
Flip the direction of the fence in scaleViewAndUpdateGeometryFenced
https://bugs.webkit.org/show_bug.cgi?id=144810
Summary
Flip the direction of the fence in scaleViewAndUpdateGeometryFenced
Tim Horton
Reported
2015-05-08 13:23:42 PDT
Flip the direction of the fence in scaleViewAndUpdateGeometryFenced
Attachments
Patch
(15.25 KB, patch)
2015-05-08 13:24 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-05-08 13:24:14 PDT
Created
attachment 252740
[details]
Patch
WebKit Commit Bot
Comment 2
2015-05-08 13:26:10 PDT
Attachment 252740
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebPageProxy.cpp:2251: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:656: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2015-05-08 13:32:52 PDT
Comment on
attachment 252740
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=252740&action=review
> Source/WebKit2/ChangeLog:20 > + Note that you must setFencePort() with this port if you want the LayerHostingContext's > + CAContext to block on it!
This comment will go unnoticed here; it should be in the code.
> Source/WebKit2/UIProcess/WebPageProxy.h:1321 > + void machSendRightCallback(const WebCore::MachSendRight&, uint64_t);
So sad we have all these untyped uint64_t.
> Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h:89 > + virtual void replyWithFenceAfterNextFlush(uint64_t callbackID) override;
If uint64_t were typed you wouldn't have to explain what it was.
> Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h:152 > + Vector<uint64_t> m_fenceCallbacksForAfterNextFlush;
:|
> Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:335 > + for (uint64_t callbackID : m_fenceCallbacksForAfterNextFlush)
auto?
Tim Horton
Comment 4
2015-05-08 13:43:08 PDT
http://trac.webkit.org/changeset/184011
Tim Horton
Comment 5
2015-05-08 13:45:36 PDT
http://trac.webkit.org/changeset/184012
Tim Horton
Comment 6
2015-05-08 13:59:32 PDT
http://trac.webkit.org/changeset/184014
Tim Horton
Comment 7
2015-05-08 14:50:38 PDT
http://trac.webkit.org/changeset/184016
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug