Source/WebKit2/UIProcess/mac/WKViewLayoutStrategy.mm
@@ -293,12 +293,13 @@ using namespace WebKit;
         _wkView._rootLayer.transform = transform;
     } else if (scale != _page->viewScaleFactor()) {
 #if PLATFORM(IOS) || __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
-        CAContext *context = [_wkView.layer context];
-        MachSendRight fencePort = MachSendRight::adopt([context createFencePort]);
-        _page->scaleViewAndUpdateGeometryFenced(scale, IntSize(_wkView.frame.size), fencePort);
-        [context setFencePort:fencePort.sendRight() commitHandler:^{
-            _wkView._rootLayer.transform = CATransform3DIdentity;
-        }];
+        RetainPtr<CAContext> context = [_wkView.layer context];
+        RetainPtr<WKView> retainedWKView = _wkView;
+        _page->scaleViewAndUpdateGeometryFenced(scale, IntSize(_wkView.frame.size), [retainedWKView, context] (const WebCore::MachSendRight& fencePort, CallbackBase::Error) {
+            [context setFencePort:fencePort.sendRight() commitHandler:^{
+                [retainedWKView _rootLayer].transform = CATransform3DIdentity;
+            }];
+        });
 #else
         _page->scaleView(scale);
         _wkView._rootLayer.transform = CATransform3DIdentity;
